--- a/package.json
+++ b/package.json
@@ -11,17 +11,42 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/html-to-text": "^9.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
+    "@types/nodemailer": "^6.4.17",
+    "@types/otp-generator": "^4.0.2",
+    "@types/pug": "^2.0.10",
+    "i": "^0.3.7",
+    "npm": "^11.0.0",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.8.0"
   },
   "dependencies": {
+    "@bull-board/api": "^5.23.0",
+    "@bull-board/express": "^5.23.0",
+    "@bull-board/ui": "^5.23.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "bullmq": "^5.34.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "html-to-text": "^9.0.5",
+    "i18n-iso-countries": "^7.13.0",
+    "ioredis": "^5.4.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.11.17",
+    "nodemailer": "^6.9.16",
+    "otp-generator": "^4.0.1",
     "pg": "^8.13.1",
+    "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "uuid": "^11.0.3"
   }
 }
