--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/otp-generator": "^4.0.2",
@@ -40,6 +41,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.17",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "otp-generator": "^4.0.1",
     "pg": "^8.13.1",
