--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bullmq": "^5.34.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "generate-passphrase": "^1.3.0",
     "html-to-text": "^9.0.5",
     "i18n-iso-countries": "^7.13.0",
     "ioredis": "^5.4.2",
