--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ioredis": "^5.4.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "libphonenumber-js": "^1.11.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
